--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,8 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:background="#0099cc" tools:context=".MainActivity">
+    android:layout_height="match_parent" android:background="#0099cc" tools:context=".MainActivity"
+    android:onClick="setContentView"
+    android:id="@+id/backgroundLayout">
 
     <!-- The primary full-screen view. This can be replaced with whatever view
          is needed to present your content, e.g. VideoView, SurfaceView,
@@ -24,13 +26,13 @@
 
             <Button android:id="@+id/start_button" style="?metaButtonBarButtonStyle"
                 android:layout_width="0dp" android:layout_height="wrap_content"
-                android:layout_weight="1" android:text="@string/dummy_button" />
+                android:layout_weight="1" android:text="@string/start_button" />
 
         </LinearLayout>
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="522dp"
+            android:layout_height="match_parent"
             android:id="@+id/imageView"
             android:layout_gravity="center_horizontal|top"
             android:src="@drawable/background"/>
@@ -45,6 +47,48 @@
             android:enabled="false"
             android:text="00:30"
             android:height="@dimen/abc_text_size_large_material" />
+
+        <ImageView
+            android:layout_width="@android:dimen/notification_large_icon_height"
+            android:layout_height="@android:dimen/notification_large_icon_width"
+            android:id="@+id/pin3"
+            android:layout_gravity="left|top"
+            android:src="@drawable/pin"/>
+
+        <ImageView
+            android:layout_width="@android:dimen/notification_large_icon_height"
+            android:layout_height="@android:dimen/notification_large_icon_width"
+            android:id="@+id/pin2"
+            android:layout_gravity="left|center_vertical"
+            android:src="@drawable/pin" />
+
+        <ImageView
+            android:layout_width="@android:dimen/notification_large_icon_height"
+            android:layout_height="@android:dimen/notification_large_icon_width"
+            android:id="@+id/pin1"
+            android:layout_gravity="left|bottom"
+            android:src="@drawable/pin" />
+
+        <ImageView
+            android:layout_width="@android:dimen/notification_large_icon_height"
+            android:layout_height="@android:dimen/notification_large_icon_width"
+            android:id="@+id/pin6"
+            android:layout_gravity="right|bottom"
+            android:src="@drawable/pin" />
+
+        <ImageView
+            android:layout_width="@android:dimen/notification_large_icon_height"
+            android:layout_height="@android:dimen/notification_large_icon_width"
+            android:id="@+id/pin5"
+            android:layout_gravity="right|center_vertical"
+            android:src="@drawable/pin" />
+
+        <ImageView
+            android:layout_width="@android:dimen/notification_large_icon_height"
+            android:layout_height="@android:dimen/notification_large_icon_width"
+            android:id="@+id/pin4"
+            android:layout_gravity="right|top"
+            android:src="@drawable/pin" />
     </FrameLayout>
 
 </FrameLayout>
